# fj

./: .env.sample  .gitignore  ai_translator.py  financial_juice_client.py  pyproject.toml  requirements.txt
fj_client/: __init__.py  client.py  constants.py  handler.py  ingest_cli.py  logger.py  slack.py  utils.py
